@@ -1,3 +1,8 @@
+2009-01-22  Brian Pepple  <bpepple@fedoraproject.org>
+
+	* src/twitux-app.c (twitux_app_show_notification):
+	Plug leak, and use better notification defaults.
+
 2009-01-21  Brian Pepple  <bpepple@fedoraproject.org>
 	
 	* src/twitux-send-message-dialog.c (message_set_characters_available):
